# FedSec

./: Things to add to our PFE's literature reviw.txt  Wget Dataset  requirements.txt
fedsec/: Config.py  README.md  pyproject.toml
fedsec/Attacker_DNN/: best_model.keras  model_round_1_20250224_113325.keras  model_round_2_20250224_113329.keras  model_round_3_20250224_113333.keras
fedsec/Attacker_XGBoost/: model_round_1_20250224_113743.model  model_round_2_20250224_113745.model  model_round_3_20250224_113746.model
fedsec/Defender_model/: best_model.keras  model_round_1_20250224_112806.keras  model_round_2_20250224_112810.keras  model_round_3_20250224_112814.keras
fedsec/fedsec/: Evaluate.ipynb  __init__.py  client_RF.py  client_XGBOOST.py  client_app.py  server_RF.py  server_XGBOOST.py  server_app.py  task.py  task_RF.py
fedsec/fedsec/saved_models/: best_model.keras  model_round_1_20250223_143310.keras  model_round_1_20250223_152425.keras  model_round_1_20250223_204906.keras  model_round_1_20250224_091547.keras  model_round_1_20250224_091656.keras  model_round_1_20250224_091842.keras  model_round_1_20250224_092011.keras  model_round_1_20250224_092230.keras  model_round_1_20250224_092314.keras  model_round_2_20250223_143315.keras  model_round_2_20250223_152430.keras  model_round_2_20250223_204909.keras  (+13 more)
fedsec/saved_models/: model_round_1_20250223_212729.model  model_round_1_20250224_091506.model  model_round_2_20250223_212731.model  model_round_2_20250224_091508.model  model_round_3_20250223_212733.model  model_round_3_20250224_091510.model
(+18 files in other folders)
